--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,3 +1,5 @@
+/* banner section */
+
 .banner-section{
     grid-template-columns: repeat(2, 1fr);
     width: 80%;
@@ -37,9 +39,16 @@
 }
 .banner-watch-icon{
     display: inline-block;
+    width: 40px;
+    height: 40px;
     padding: 10px;
     background: #FFFFFF;
     box-shadow: 2px 20px 60px rgba(61, 155, 185, 0.1);
+    border-radius: 50%;
+    margin-right: 5px;
+}
+.banner-watch-icon:hover{
+    cursor: pointer;
 }
 .banner-watch-link{
     font-size: 24px;
@@ -52,6 +61,71 @@
 .banner-right{
     grid-template-columns: repeat(2, 1fr);
 }
+
+.banner-right-calender{
+    width: 30px;
+}
 .banner-right-img{
     width: 100%;
+}
+
+/* trusted companies section */
+
+.trusted-companies-section{
+    grid-template-columns: repeat(6, 1fr);
+    width: 80%;
+    margin: 0 auto;
+    grid-gap: 10px;
+}
+.trusted-companies-section img{
+    width: 80%;
+}
+.trusted-companies-heading{
+    text-align: center;
+    margin: 100px 0 54px;
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 160%;
+    letter-spacing: 0.02em;
+    color: #696984;
+}
+.cloud-software-top{
+    width: 40%;
+    margin: 0 auto;
+}
+.blue-all-in-one{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 180%;
+    color: #2F327D;
+    margin: 165px 0 20px;
+}
+.orange-cloud-software{
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 180%;
+    color: #F8B053;
+}
+.cloud-software-top p{
+    margin-bottom: 100px;
+}
+.cloud-software-facilities{
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 60px;
+    width: 80%;
+    margin: 0 auto;
+}
+.cloud-software-facility-card{
+    position: relative;
+    background-color: white;
+    box-shadow: 0px 10px 60px rgba(38, 45, 118, 0.08);
+    border-radius: 20px;
+    text-align: center;
+    padding: 120px 40px 50px;
+}
+.cloud-software-facility-card img{
+    width: 80px;
+    position: absolute;
+    top: -30px;
+    left: 38%;
 }
