--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -17,13 +17,13 @@
     line-height: 160%;
     color: #464646;
 }
-.orange-text{
+.banner-heading-start{
     font-weight: 700;
     font-size: 54px;
     line-height: 81px;
     color: #F48C06;
 }
-.blue-text{
+.banner-heading-finish{
     font-weight: 700;
     font-size: 54px;
     line-height: 81px;
@@ -229,3 +229,18 @@
     color: white;
     margin-top: 10px;
 }
+
+/* testimonial section */
+
+.testimonial-line{
+    width: 80px;
+    border: 1px solid #525596;
+    display: inline-block;
+    margin: 0 20px 5px 0;
+}
+
+.assessment-link{
+    padding: 5px;
+    border: 1px solid #F48C06;
+    border-radius: 80px;
+    }
