--- a/src/components/Reviews/Reviews.css
+++ b/src/components/Reviews/Reviews.css
@@ -1,6 +1,4 @@
-/* testimonial section */
-
-.testimonial-line{
+.reviews-line{
     width: 80px;
     border: 1px solid #525596;
     display: inline-block;
