--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -66,3 +66,51 @@
     border: 1px solid white;
     background-color: transparent;
 }
+
+/* css media query for responsiveness */
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 600px) {
+
+    .banner-section{
+        grid-template-columns: repeat(1, 1fr);
+        width: 90%;
+    }
+
+    .trusted-companies-section{
+        grid-template-columns: repeat(1, 1fr);
+        width: 90%;
+    }
+
+    .trusted-companies-section img{
+        width: 95%;
+    }
+
+    .cloud-software-facilities{
+        grid-template-columns: repeat(1, 1fr);
+        width: 90%;
+    }
+
+    .about-us-card-container{
+        grid-template-columns: repeat(1, 1fr);
+        width: 90%;
+    }
+
+    .more-about-us{
+        grid-template-columns: repeat(1,1fr);
+    }
+
+    .our-feature-content{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .tools-section-top{
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .second-feature-section{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+}
