--- a/src/components/CloudSoftware/CloudSoftware.css
+++ b/src/components/CloudSoftware/CloudSoftware.css
@@ -39,3 +39,14 @@
     top: -30px;
     left: 38%;
 }
+
+/* css media query for responsiveness */
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 600px) {
+
+    .cloud-software-facilities{
+        grid-template-columns: repeat(1, 1fr);
+        width: 90%;
+    }
+}
