--- a/src/components/MoreAboutUs/MoreAboutUs.css
+++ b/src/components/MoreAboutUs/MoreAboutUs.css
@@ -5,3 +5,14 @@
     margin: 0 auto;
     grid-template-columns: repeat(2,1fr);
 }
+
+/* css media query for responsiveness */
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 600px) {
+
+    .more-about-us{
+        grid-template-columns: repeat(1,1fr);
+    }
+
+}
