--- a/src/components/TrustedByCompanies/TrustedByCompanies.css
+++ b/src/components/TrustedByCompanies/TrustedByCompanies.css
@@ -19,3 +19,18 @@
     letter-spacing: 0.02em;
     color: #696984;
 }
+
+/* css media query for responsiveness */
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 600px) {
+
+    .trusted-companies-section{
+        grid-template-columns: repeat(1, 1fr);
+        width: 90%;
+    }
+
+    .trusted-companies-section img{
+        width: 95%;
+    }
+}
