--- a/src/components/SecondFeature/SecondFeature.css
+++ b/src/components/SecondFeature/SecondFeature.css
@@ -36,3 +36,14 @@
 .more-feature-btn:hover{
     color: #F48C06;
 }
+
+/* css media query for responsiveness */
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 600px) {
+
+    .second-feature-section{
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+}
