--- a/src/components/Tools/Tools.css
+++ b/src/components/Tools/Tools.css
@@ -21,3 +21,15 @@
     letter-spacing: 0.02em;
     color: #696984;
 }
+
+/* css media query for responsiveness */
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 600px) {
+
+    .tools-section-top{
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+}
